search input aligned correctly

--- a/src/SearchTable.css
+++ b/src/SearchTable.css
@@ -1,20 +1,9 @@
 .search-form {
-  /* width: 500px; */
-  /* display: flex;
-  justify-content: center;
-  flex-basis: 90%;
-  flex-grow: 2;
-  margin-left: 100px; */
-  /* background-color: transparent;
-  background: none; */
-  /* padding: 0 50px 30px 50px; */
-  /* max-width: 768px; */
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start; */
+  /* margin-bottom: 900px;
+  width: 768px; */
 }
 
 .form-control {
-  max-width: 768px;
+  /* max-width: 98px; */
   /* padding-top: 100px; */
 }
